--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
