--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "colors": "^1.4.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "nanoid": "^4.0.2",
     "path": "^0.12.7"
   }
 }
